--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,10 @@ RoxygenNote: 7.3.2
 URL: https://github.com/Hinna0818/UKBAnalytica
 BugReports: https://github.com/Hinna0818/UKBAnalytica/issues
 Imports: 
-    data.table (>= 1.14.0),
-    stringi (>= 1.7.0)
+    data.table,
+    stringi
 Suggests:
-    testthat (>= 3.0.0),
+    testthat,
     survival
 Config/testthat/edition: 3
 Config/Needs/bioc: FALSE
