--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: A high-performance R package for processing UK Biobank (UKB)
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 URL: https://github.com/Hinna0818/UKBAnalytica
 BugReports: https://github.com/Hinna0818/UKBAnalytica/issues
 Imports: 
@@ -17,6 +17,7 @@ Imports:
     stringi
 Suggests:
     testthat,
-    survival
+    survival,
+    tableone
 Config/testthat/edition: 3
 Config/Needs/bioc: FALSE
