--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-URL: https://github.com/Hinna0818/UKBAnalytica
+URL: https://github.com/Hinna0818/UKBAnalytica,
+    https://hinna0818.github.io/UKBAnalytica/
 BugReports: https://github.com/Hinna0818/UKBAnalytica/issues
 Imports: 
     data.table,
@@ -18,6 +19,7 @@ Imports:
 Suggests:
     testthat,
     survival,
-    tableone
+    tableone,
+    mice
 Config/testthat/edition: 3
 Config/Needs/bioc: FALSE
